# snap-kube

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  format-workflow.yaml  tests-workflow.yaml
snap-kube-client/: Cargo.toml
snap-kube-client/src/: main.rs
src/: lib.rs
src/aws_ops/: ebs.rs  mod.rs  region.rs
src/backup/: backup_operator.rs  backup_payload.rs  mod.rs
src/k8s_ops/: mod.rs
src/k8s_ops/pvc/: mod.rs  persistent_volume_claims.rs  persistent_volume_claims_operator.rs  persistent_volume_claims_payload.rs  persistent_volume_claims_tests.rs
src/k8s_ops/vs/: mod.rs  volume_snapshots.rs  volume_snapshots_operator.rs  volume_snapshots_tests.rs
src/k8s_ops/vsc/: mod.rs  retain_policy.rs  volume_snapshot_contents.rs  volume_snapshot_contents_operator.rs  volume_snapshot_contents_tests.rs
src/restore/: mod.rs  restore_operator.rs  restore_payload.rs
