[package]
name = "snap-kube"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "The snap-kube is a Rust-based tool that can backup and restore Kubernetes PVCs across namespaces using AWS EBS snapshots"
readme = "README.md"
homepage = "https://github.com/nikoshet/snap-kube"
repository = "https://github.com/nikoshet/snap-kube"
keywords = ["k8s", "pvc", "snapshot", "ebs", "aws"]
documentation = "https://docs.rs/snap-kube"
exclude = ["script.sh"]

[workspace]
members = ["snap-kube-client"]

[workspace.dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
aws-config = "1.5.7"
aws-sdk-ec2 = "1.75.0"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
k8s-openapi = { version = "0.23.0" , features = ["v1_30"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
kube-custom-resources-rs = { version = "2024.9.1", features = ["snapshot_storage_k8s_io"] }
pretty_assertions = "1.4.1"
schemars = "0.8.21"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
snap-kube = { path = ".", version = "0.1" }
mockall = "0.13"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
clap.workspace = true
colored.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
kube-custom-resources-rs.workspace = true
pretty_assertions.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mockall.workspace = true

[lib]
test = true
edition = "2021"
crate-type = ["lib"]
name = "snap_kube"

[features]
default = ["full"]
full = ["backup", "restore"]
backup = []
restore = []
