[package]
name = "snap-kube-client"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "The snap-kube-client is a Rust-based client that can backup and restore Kubernetes PVCs across namespaces using AWS EBS snapshots"
readme = "../README.md"
homepage = "https://github.com/nikoshet/snap-kube"
repository = "https://github.com/nikoshet/snap-kube"
keywords = ["k8s", "pvc", "snapshot", "ebs", "aws"]
documentation = "https://docs.rs/snap-kube-client"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
clap.workspace = true
colored.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
kube-custom-resources-rs.workspace = true
pretty_assertions.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
snap-kube.workspace = true
mockall = "0.13.0"

[features]
default = ["full"]
full = ["backup", "restore"]
backup = []
restore = []
